--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 This is the git project for homework assignments in [CIS 501: Fall 2015](http://cis.upenn.edu/~cis501/).
 
-This code is written in Java and setup as a Maven project. To get started:
+This code is written in Java and setup as an ant project. To get started:
 
 # clone the repo
 # from the root directory of the repo, run `ant test`. This will
